kube/gcp/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-blog-prod
  labels:
    app: service-blog-prod
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: blog
    env: prod
