kube/gcp/service-stage.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-blog-stage
  labels:
    app: service-blog-stage
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: blog
    env: stage
